Fixed sidebar icon alignment

--- a/components/sidebar.scss
+++ b/components/sidebar.scss
@@ -133,7 +133,7 @@
                     }
 
                     .icon {
-                        width: auto;
+                        width: 20px;
                         height: 20px;
                         margin-top: 2px;
                     }
